--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,15 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile 'org.thymeleaf:thymeleaf:3.0.9.RELEASE'
     compile('org.springframework.boot:spring-boot-starter-web')
+    runtime ('org.springframework.boot:spring-boot-starter-parent:1.4.0.RELEASE')
+    compile("org.springframework.boot:spring-boot-devtools")
     runtime('com.h2database:h2')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'org.mariadb.jdbc:mariadb-java-client'
+    compile 'javax.servlet.jsp.jstl:javax.servlet.jsp.jstl-api:1.2.1'
+    runtime 'taglibs:standard:1.1.2'
+    compile 'org.apache.tomcat.embed:tomcat-embed-jasper'
 }
