--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/postbase
 spring.datasource.username=root
 spring.datasource.password=12ser
+
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache = false
+
+spring.mvc.view.prefix=templates/
+spring.mvc.view.suffix=.jsp
+
