Migration to cloud(AWS): START!

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/postbase
-spring.datasource.username=root
-spring.datasource.password=12ser
+spring.datasource.url=jdbc:mariadb://gab.csjh09bxtvwl.eu-central-1.rds.amazonaws.com:3306/gab
+spring.datasource.username=gab
+spring.datasource.password=zaq12wsx
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache = false
